<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#172532"
    android:padding="2dp"
    android:weightSum="10">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-Attendance form-"
                android:textColor="#aacff9"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Department"
                android:textColor="#108fbd"
                android:gravity="center"
                android:padding="2dp"
                android:textSize="20sp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/department"
                android:hint="Department"
                android:entries="@array/department_array"
                android:prompt="@string/department"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Semester"
                android:textColor="#108fbd"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="20sp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/sem"
                android:entries="@array/sem_array"
                android:prompt="@string/sem"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Lecture Type"
                android:textColor="#108fbd"
                android:gravity="center"

                android:textSize="20sp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/lecturespinner"
                android:gravity="center"
                android:entries="@array/lecture_type_array"
                android:prompt="@string/lecture_type"
                android:layout_below="@+id/editText3"

                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Subject ID"
                android:textColor="#108fbd"
                android:gravity="center"
                android:padding="4dp"
                android:id="@+id/subjectidtextview"
                android:textSize="20sp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/subidspinner"
                android:hint="Subject ID"
                android:gravity="center"
                android:textColor="#ffffff"
                android:entries="@array/cesubarray"
                android:prompt="@string/subid"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Lecture Slots"
                android:textColor="#108fbd"
                android:gravity="center"
                android:padding="4dp"

                android:textSize="20sp"/>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:weightSum="6">


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="25dp"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:checked="true"
                    android:id="@+id/checkboxfor1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:textSize="25dp"
                    android:id="@+id/checkboxfor2" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:layout_weight="1"
                    android:textSize="25dp"
                    android:textColor="#ffffff"
                    android:id="@+id/checkboxfor3" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:textSize="25dp"
                    android:id="@+id/checkboxfor4" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:layout_weight="1"
                    android:textSize="25dp"
                    android:textColor="#ffffff"
                    android:id="@+id/checkboxfor5" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:textSize="25dp"
                    android:id="@+id/checkboxfor6" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Batch No"
                android:textColor="#108fbd"
                android:gravity="center"
                android:textSize="20sp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/batchnospiner"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:entries="@array/Batch_no_array"
                android:prompt="@string/Batch_no"
 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter BTNO"
                android:textColor="#108fbd"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btno"
                android:hint="btno"
                android:gravity="center"
                android:textColor="#ffffff"
                android:background="@drawable/apptheme_textfield_activated_holo_light"
                android:layout_below="@+id/spinner2"
                android:layout_alignLeft="@+id/spinner2"
                android:layout_alignStart="@+id/spinner2"
                android:layout_alignRight="@+id/spinner2"
                android:layout_alignEnd="@+id/spinner2" />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter DATE (MM-DD-YYYY)"
                android:textColor="#108fbd"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="Date"
                android:ems="10"
                android:id="@+id/date"
                android:gravity="center"
                android:textColor="#ffffff"
                android:background="@drawable/apptheme_textfield_activated_holo_light"
                android:layout_below="@+id/editText4"
                android:layout_alignLeft="@+id/editText4"
                android:layout_alignStart="@+id/editText4"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Server Output"
                android:padding="5dp"
                android:textColor="#108fbd"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

            TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:textColor="#ffffff"
                android:id="@+id/output"
                android:layout_gravity="center_horizontal" />

            <WebView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/webView" />


        </LinearLayout>
    </ScrollView>



        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"

            android:id="@+id/snackbarPosition2"

            android:layout_above="@+id/linearLayout">
        </android.support.design.widget.CoordinatorLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/shadow"
        android:gravity="center"
        android:layout_weight="2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/submiturlbutton"
            android:layout_width="300sp"
            android:layout_height="55sp"
            android:background="@drawable/backbut"
            android:textColor="#aacff9"
            android:layout_alignLeft="@+id/listView1"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/listView1"
            android:layout_gravity="center_horizontal"
            android:text="Submit"
            />
    </LinearLayout>

</LinearLayout>